# abicorn-on-graduation-ceremony

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pipeline.yml
include/: Abicorn.h  AbicornContext.h  LibData.hpp  Options.h
include/Checkers/: Checker.h  CheckerStorage.h  ClassChecker.h  FieldChecker.h  FunctionChecker.h  GlobalVariableChecker.h  InheritanceChecker.h  MethodChecker.h  VtableChecker.h
include/LibBuilders/: FunctionBuilder.h  LibBuilder.h  LibBuilderStorage.h  RecordBuilder.h  VariableBuilder.h
include/Matchers/: Matchers.h
include/Utils/: Hash.h  Util.h
src/: Abicorn.cpp  AbicornContext.cpp  CMakeLists.txt  main.cpp
src/Checkers/: CMakeLists.txt  ClassChecker.cpp  FieldChecker.cpp  FunctionChecker.cpp  GlobalVariableChecker.cpp  InheritanceChecker.cpp  MethodChecker.cpp  VtableChecker.cpp
src/LibBuilders/: CMakeLists.txt  FunctionBuilder.cpp  RecordBuilder.cpp  VariableBuilder.cpp
src/Utils/: CMakeLists.txt  Hash.cpp
test/: .gitignore  CMakeLists.txt  lit.cfg.py
test/BaseClassOrderChange/: new.cpp  old.cpp
test/ClassFinal/: new.cpp  old.cpp
test/ClassForwardDeclaration/: ClassForwardDeclaration.cc  old.cpp  old2.cpp
test/ClassMissing/: new.cpp  old.cpp
test/ClassSizeChange/: ClassSizeChange.cc  new.cpp  old.cpp
test/ClassTemplateSpecializationsNotConfused/: new.cpp  old.cpp
test/ClassesInFunctionsIgnored/: ClassesInFunctionsIgnored.cc  new.cpp  old.cpp
test/CommonCompilerOptions/: CommonCompilerOptions.cc  new.cpp
test/CompileCommands/: CompileCommands.cc  generate_compile_commands.py  new.cpp  old.cpp
test/DeclarationsOnly/: new.cpp  old.cpp
test/FieldAccessModifierChange/: new.cpp  old.cpp
test/FieldIndexChange/: new.cpp  old.cpp
test/FieldIndexChangeAnonymousBitfields/: FieldIndexChangeAnonymousBitfields.cc  old.cpp
test/FieldIndexChangeUnion/: new.cpp  old.cpp
test/FieldMissing/: new.cpp  old.cpp
test/FieldMissingStatic/: new.cpp  old.cpp
test/FieldNested/: new.cpp  old.cpp
test/FieldNewStatic/: FieldNewStatic.cc  new.cpp  old.cpp
test/FieldStorageChange/: new.cpp  old.cpp
test/FieldTypeChange/: new.cpp  old.cpp
test/FunctionAnonymousNamespace/: new.cpp  old.cpp
test/FunctionAttributeChange/: FunctionAttributeChange.cc  new.cpp  old.cpp
test/FunctionMissing/: FunctionMissing.cc  new.cpp  old.cpp
test/FunctionReachable/: new.cpp  old.cpp
test/FunctionTemplate/: new.cpp  old.cpp
test/FunctionTemplateSpecialization/: new.cpp  old.cpp
test/GlobalVariableAnonymousNamespace/: new.cpp  old.cpp
test/GlobalVariableChangeInType/: new.cpp
test/GlobalVariableExtern/: GlobalVariableExtern.cc  new.h  old.h
test/GlobalVariableReachable/: new.cpp  old.cpp
test/GlobalVariableTemplate/: new.cpp  old.cpp
test/GlobalVariableTemplatePartialSpecialization/: new.cpp  old.cpp
test/GlobalVariableTemplateSpecialization/: new.cpp  old.cpp
test/IndividualCompilerOptions/: IndividualCompilerOptions.cc  new.cpp  old.cpp
test/InheritanceAccessSpecifier/: new.cpp
test/InheritanceAddedBase/: new.cpp
test/InheritanceAddedBaseHigher/: new.cpp  old.cpp
test/InheritanceChangeInVirtuality/: new.cpp  old.cpp
test/InheritanceChangeInVirtualityHigher/: new.cpp  old.cpp
test/InheritanceMacro/: new.cpp  old.cpp
test/InheritanceMissingBase/: new.cpp  old.cpp
test/InheritanceMissingBaseHigher/: new.cpp  old.cpp
test/InheritanceNested/: new.cpp  old.cpp
test/InheritanceTemplate/: new.cpp  old.cpp
test/InheritanceTemplateSpecialization/: new.cpp  old.cpp
test/InheritanceUnreachable/: new.cpp  old.cpp
test/LeakedPrivateMethod/: LeakedPrivateMethod.cc  new.cpp  old.cpp
test/MethodAccessModifier/: MethodAccessModifier.cc  new.cpp  old.cpp
test/MethodAttributes/: new.cpp  old.cpp
test/MethodConstNonConstPair/: new.cpp
test/MethodCtor/: new.cpp  old.cpp
test/MethodDifferentSpecializations/: new.cpp
test/MethodDtor/: new.cpp  old.cpp
test/MethodMissing/: new.cpp  old.cpp
test/MethodNested/: new.cpp  old.cpp
test/MethodOverload/: new.cpp  old.cpp
test/MethodRefQualifier/: new.cpp  old.cpp
test/MethodTemplate/: new.cpp  old.cpp
test/MethodTemplateNested/: new.cpp  old.cpp
test/MixedCompilerOptions/: MixedCompilerOptions.cc  new.cpp  old.cpp
test/NewASTBuildFailure/: new.cpp
test/NewSourcesMissing/: NewSourcesMissing.cc
test/NoDuplicateMessage/: NoDuplicateMessage.cc  new.cpp  old2.cpp
test/OldASTBuildFailure/: new.cpp
test/OldSourcesMissing/: OldSourcesMissing.cc
test/RunningWithoutFlags/: RunningWithoutFlags.cc  new.cpp
test/StaticMemberInitialization/: new.cpp  old.cpp
test/TemplateParameterChange/: new.cpp  old.cpp
test/TypeHashCorrection/: new.cpp  old.cpp
test/TypeNamespace/: new.cpp  old.cpp
test/VirtualMethodsExactMatch/: new.cpp  old.cpp
test/VtableAddVirtualMethod/: new.cpp  old.cpp
test/VtableChangeInFinality/: new.cpp  old.cpp
test/VtableChangeInVirtuality/: new.cpp  old.cpp
test/VtableMethodIndexChange/: VtableMethodIndexChange.cc  new.cpp  old.cpp
test/VtableRemoveVirtualMethod/: new.cpp  old.cpp
test/WrongCommandLineArgument/: WrongCommandLineArgument.cc
unittest/: CMakeLists.txt  hash.cpp
